stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_if_arms_must_match.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "0bb1e018aaeb6bcd3a5047032f54bd693e7ce9793994ee53ae6d595d950ec304",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: if-arms-must-match-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'if\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 981,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 981,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1542334d1bdc0fcec044ea150d0a34cdeadfe134db47d0b177304c85b1811b7a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: if-arms-must-match-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'if\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 980,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 980,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "331651c17e136eaa25b15129ba3d6afd2024014b0ce9f7d094e8f687bb933206",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: if-arms-must-match-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'if\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 980,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 980,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "353b17b9e6ec5a7d7c188bc9cfa09b284330326df2be0c207c136f3a1461b7e7",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: if-arms-must-match-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'if\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 980,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 980,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "be0610b2871c7bbd6cb8d81179f31b08c1c6c39b8121b26f886fd2c476c5e8ea",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: if-arms-must-match-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expression types returned by the arms of \'if\' must match (got \'bool\' and \'int\')) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 6,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 980,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 6,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 980,
    ),
  )),
]
