stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_illegal_or_unknown_function_application.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "c460d6f0924bd25945c0498a2f0a6b1b874775060366e7b82b53b4cdca8de279",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a5b167f3613dc207bf87d2565b0a8e01c5eaca2bef6a98b28ca64c9a996fbc4d",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b2e637a4ff5ee4e0b9e3ee3ae66cb1baf02b0f60333efec5ddf0359f86cc09f",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "90cc7199f32988058e84eb2988e65e705abaa633c35bbf41329183c7693ce27b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cf7ab7e851479cfac9db93e30db4852ab052bb12880fec9687719991a945f37f",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c00d9232b162d2ca06cbf3662ea42e51a6d04a0d4d8d04141a908a5115414374",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9eaf65190d56d603ea765694314a9af8096e25a33a6a38b4accaaab30366f188",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7cd94ca16668e388089b714ec0336c6456226986ad63e22b1e8d6304cd4775eb",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "018818a0c79c91002c112a4e9c74bc009d19b32030379d47e04da6ebbd6e7f76",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "84dd82253795dd02b666f21ce68abd0e6465f452ee780cdbb0c88d7d4d4d1047",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "35b6e622d60e4ce3487b0c4771a7ba0d8641f7dab9094265faa2b8a81941a679",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
]
