stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_incompatible_trait.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "a4a461eb296b48605985fc4f3e747c5e48fde653280f350cbd9b962ab52a0c9a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type \'<ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity1.trait-2>\', found \'<ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity1.trait-1>\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10728,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10728,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a7ac3b06ad795b7df63b5d254e1931175bf0aa1ed65f183733bf56d05c5f7284",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity2.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity2.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "564ed44d7fe124fd743b291826372b1942ab30fc74532abe82aecb66f01bc947",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity3.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity3.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1f3577218340dfef59a2a115dc32ef5eb35c5155f566c7d09527b09504688093",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity4.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity4.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e4d35f8df763ff4621aad5e275e2f71d61f1fda5d40f1d83a8d462bc2081fa0b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: incompatible-trait-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: trait \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity5.trait-1\' is not a compatible with expected trait, \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.incompatible-trait-Epoch3_4-Clarity5.trait-2\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 47,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 10716,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 47,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 10716,
    ),
  )),
]
